--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring file
+secrets.json
 
 # dependencies
 /node_modules
@@ -32,3 +33,4 @@ yarn-error.log*
 
 # vercel
 .vercel
+
